# ratvalue

./: .gitignore  CMakeLists.txt  LICENSE  PLANO.md  README.md  apv.cpp  apv.h  bank.cpp  bank.h  beta.cpp  beta.h  capital_structure.cpp  capital_structure.h  capm.cpp  capm.h  dcf.cpp  dcf.h  ddm.cpp  ddm.h  detail.h  distress.cpp  distress.h  excess_returns.cpp  excess_returns.h  fcfe.cpp  fcfe.h  fcff.cpp  fcff.h  growth.cpp  growth.h  kd.cpp  kd.h  main.cpp  normalize.cpp  normalize.h  pyproject.toml  relative.cpp  relative.h  startup.cpp  startup.h  (+6 more)
docs/: flowchart.tex  manual.tex  math.tex
pipeline/: README.md  brapi_fetch.py  bulk.py  demo.py  prepare_inputs.py  report.py  valuation.sh
python/: CMakeLists.txt  bind_apv.cpp  bind_bank.cpp  bind_beta.cpp  bind_capital_structure.cpp  bind_capm.cpp  bind_dcf.cpp  bind_ddm.cpp  bind_distress.cpp  bind_excess_returns.cpp  bind_fcfe.cpp  bind_fcff.cpp  bind_growth.cpp  bind_helpers.h  bind_kd.cpp  bind_normalize.cpp  bind_relative.cpp  bind_startup.cpp  bind_terminal.cpp  bind_wacc.cpp  module.cpp
