[build-system]
requires = ["scikit-build-core>=0.9", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "ratvalue"
version = "0.1.0"
description = "Damodaran valuation framework — C++23 with exact rational arithmetic"
readme = "README.md"
requires-python = ">=3.9"

[tool.scikit-build]
cmake.build-type      = "Release"
cmake.source-dir      = "."
wheel.packages        = []
install.components    = ["python_modules"]

[tool.scikit-build.cmake.define]
BUILD_PYTHON      = "ON"
CMAKE_PREFIX_PATH = "/usr/local"
